--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "serve": "static dist -p 3857 -a 0.0.0.0 -H '{\"Cache-Control\": \"no-cache, must-revalidate\"}'",
     "demo": "grunt html2js after-test && static dist -p 3857 -a 0.0.0.0 -H '{\"Cache-Control\": \"no-cache, must-revalidate\"}'",
     "test": "grunt",
-	"release": "grunt release"
+	"release": "grunt release --"
   },
   "repository": {
     "type": "git",
